Code highlighter layout bug fix

--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -8,6 +8,7 @@
     var(--gap),
     var(--inline-size)
   );
+  inline-size: 100%;
 
   &--wide {
     --inline-size: 100%;
